Bug 565622 - [16] JEP 394: Pattern Matching for instanceof (final)
Make the feature standard/final

Change-Id: I57c08febabc32b5941b594031e6da3e782fc14b7
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>